--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <meta
-            name="description"
-            content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-
+    <meta name="description" content="WMS - Warehouse Management System"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>React App</title>
+    <title>WMS</title>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
